# safe-copilot

./: .gitignore  README.md  pyproject.toml  requirements.txt
.devcontainer/: Dockerfile  Setup.sh  devcontainer.json
configs/navsim/common/agent/: qwen_agent.yaml  recogdrive_agent.yaml  safe_copilot_agent.yaml  transfuser_agent.yaml
configs/navsim/pdm_scoring/: default_run_pdm_score.yaml
download/: download_navtrain.sh
examples/evaluation/: run_pdm_score_recogdrive.py
examples/models/diffusion_planner/: README.md  diffusion_onnx_trt.py  s.py
examples/models/internvl/: README.md  vit_onnx_trt.py
examples/models/qwen/: README.md  build_trtllm.py  convert_checkpoint.py  trt_hidden_state_engine.py
examples/models/qwen2/: README.md  convert_checkpoint.py
examples/models/recogdrive/: convert_checkpoint.py  recogdrive_vlm_engines.py  trt_hidden_state_engine.py
scripts/: convert_checkpoint.sh  run_caching_recogdrive_no_hidden_state.sh  run_recogdrive_train_multi_node_2b.sh  setup.sh  test.sh
scripts/cache_dataset/: run_caching_recogdrive_hidden_state.sh  run_caching_recogdrive_no_hidden_state.sh  run_metric_caching_test.sh  run_metric_caching_train.sh
scripts/evaluation/: run_recogdrive_agent_pdm_score_evaluation_2b.sh
src/: __init__.py
src/agents/: qwen_agent.py
src/agents/recogdrive/: recogdrive_agent.py  recogdrive_backbone.py  recogdrive_diffusion_planner_trt.py  recogdrive_trt_agent.py  recogdrive_trt_backbone.py
src/agents/recogdrive/blocks/: rope.py
src/agents/safe_copilot/: recogdrive_diffusion_planner.py  recogdrive_features.py  safe_agent.py  safe_backbone.py
src/agents/safe_copilot/blocks/: encoder.py
src/agents/safe_copilot/recogdrive/: recogdrive_agent.py
src/agents/safe_copilot/recogdrive/utils/: internvl_preprocess.py  (+2 more)
src/agents/transfuser/: transfuser_agent.py
src/models/: _internvl_chat_runtime.py  action_head.py  conversation.py  intern_vit.py  internvl_chat.py  safe.py  sub.py  utils.py  vit.py
src/navsim/agents/: intervl_agent.py
src/navsim/agents/recogdrive/: recogdrive_agent.py  recogdrive_dit.py  recogdrive_features.py
src/navsim/agents/transfuser/: transfuser_backbone.py
src/navsim/common/: dataclasses.py  dataloader.py
src/navsim/planning/script/: plt_all_log.py  plt_all_vis.py  run_dataset_caching.py  run_dataset_caching_multi_node.py  run_generate_dataset.py  run_generate_dataset_pipeline.py  run_merge_submission_pickles.py  run_pdm_score.py  run_pdm_score_qwen.py  run_pdm_score_recogdrive.py  run_recogdrive_accelerate.py  run_training.py  run_training_recogdrive.py  run_training_recogdrive_ema.py  run_training_recogdrive_rl.py
src/navsim/planning/training/: abstract_feature_target_builder.py  agent_lightning_module.py  dataset.py
src/navsim/tutorial/: tutorial_visualization.ipynb
src/navsim/visualization/: bev.py  camera.py  config.py  plots.py
tests/: test_diffusion_denoising_step_trt.py  test_internvl_chat.py  test_models.py  test_packages.py  test_recogdrive_engines.py  test_recogdrive_trt_agent.py  test_safe_backbone.py
(+6 files in other folders)
